kustomize/networking/base/allow-databases.yaml
# Network Policy to Deny Communication from pgfarm instance databases to core pgfarm services
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-database
spec:
  podSelector:
    matchLabels:
      pgfarm-type: database
  policyTypes:
    - Ingress # Define ingress rules
  ingress:
    - from:
        # Allow traffic from databases and core services
        - podSelector:
            matchExpressions:
            - key: pgfarm-type
              operator: In
              values:
                - database
                - core-service
                - gateway
